--- a/LineShaftKiosk/assets/css/screen.css
+++ b/LineShaftKiosk/assets/css/screen.css
@@ -827,12 +827,14 @@ input[type="checkbox"]:focus {
 }
 
 .control-center {
+  position: relative;
   display: block;
   width: 1620px;
   height: 1080px;
   margin: 0 auto;
   background: #222;
   padding: 250px;
+  overflow: hidden;
 }
 
 .cc-button {
@@ -849,6 +851,170 @@ input[type="checkbox"]:focus {
   background: #a8d9f4;
 }
 
+.cd-modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+  -moz-transition: visibility 0s 0.3s, opacity 0.3s 0s, z-index 0s 0.3s;
+  -o-transition: visibility 0s 0.3s, opacity 0.3s 0s, z-index 0s 0.3s;
+  -webkit-transition: visibility 0s, opacity 0.3s, z-index 0s;
+  -webkit-transition-delay: 0.3s, 0s, 0.3s;
+  transition: visibility 0s 0.3s, opacity 0.3s 0s, z-index 0s 0.3s;
+}
+.cd-modal::after {
+  /* gradient overlay at bottom of modal window */
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  pointer-events: none;
+  background: transparent;
+  background: #888;
+}
+.cd-modal .cd-modal-content {
+  height: 100%;
+  width: 100%;
+  padding: 3em 5%;
+  text-align: left;
+  overflow-y: auto;
+}
+.cd-modal p {
+  color: #fff;
+  line-height: 1.6;
+  margin: 2em 0;
+}
+.modal-is-visible .cd-modal {
+  z-index: 1;
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
+  -moz-transition: visibility 0s 0s, opacity 0.3s 0s, z-index 0s 0s;
+  -o-transition: visibility 0s 0s, opacity 0.3s 0s, z-index 0s 0s;
+  -webkit-transition: visibility 0s, opacity 0.3s, z-index 0s;
+  -webkit-transition-delay: 0s, 0s, 0s;
+  transition: visibility 0s 0s, opacity 0.3s 0s, z-index 0s 0s;
+}
+.modal-is-visible .cd-modal .cd-modal-content {
+  -webkit-overflow-scrolling: touch;
+}
+.cd-modal .cd-modal-content {
+  padding: 6em 20%;
+}
+.cd-modal p {
+  font-size: 2rem;
+  line-height: 2;
+}
+
+.cd-modal-action {
+  position: relative;
+}
+.cd-modal-action .btn, .cd-modal-action .cd-modal-bg {
+  display: inline-block;
+  height: 4em;
+  background-color: #888;
+}
+.cd-modal-action .btn {
+  width: 12.5em;
+  border-radius: 5em;
+  color: #fff;
+  line-height: 4em;
+  white-space: nowrap;
+  font-weight: 700;
+  -moz-transition: color 0.2s 0.3s, width 0.3s 0s;
+  -o-transition: color 0.2s 0.3s, width 0.3s 0s;
+  -webkit-transition: color 0.2s, width 0.3s;
+  -webkit-transition-delay: 0.3s, 0s;
+  transition: color 0.2s 0.3s, width 0.3s 0s;
+}
+.cd-modal-action .btn.to-circle {
+  width: 4em;
+  color: transparent;
+  -moz-transition: color 0.2s 0s, width 0.3s 0.2s;
+  -o-transition: color 0.2s 0s, width 0.3s 0.2s;
+  -webkit-transition: color 0.2s, width 0.3s;
+  -webkit-transition-delay: 0s, 0.2s;
+  transition: color 0.2s 0s, width 0.3s 0.2s;
+}
+.cd-modal-action .cd-modal-bg {
+  position: absolute;
+  z-index: 1;
+  left: 50%;
+  top: 0;
+  width: 4em;
+  border-radius: 50%;
+  opacity: 0;
+  visibility: hidden;
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -moz-transform: translateX(-2em);
+  -ms-transform: translateX(-2em);
+  -webkit-transform: translateX(-2em);
+  transform: translateX(-2em);
+  -moz-transition: visibility 0s 0.5s;
+  -o-transition: visibility 0s 0.5s;
+  -webkit-transition: visibility 0s;
+  -webkit-transition-delay: 0.5s;
+  transition: visibility 0s 0.5s;
+}
+.cd-modal-action .cd-modal-bg.is-visible {
+  opacity: 1;
+  visibility: visible;
+}
+
+.cd-modal-close {
+  position: fixed;
+  z-index: 100;
+  top: 20px;
+  right: 20px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  /* image replacement */
+  overflow: hidden;
+  text-indent: 100%;
+  white-space: nowrap;
+  visibility: hidden;
+  opacity: 0;
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -moz-transform: scale(0);
+  -ms-transform: scale(0);
+  -webkit-transform: scale(0);
+  transform: scale(0);
+  -moz-transition: -moz-transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s;
+  -o-transition: -o-transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s;
+  -webkit-transition: -webkit-transform 0.3s, visibility 0s, opacity 0.3s;
+  -webkit-transition-delay: 0s, 0.3s, 0s;
+  transition: transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s;
+}
+.no-touch .cd-modal-close:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.modal-is-visible .cd-modal-close {
+  visibility: visible;
+  opacity: 1;
+  -moz-transition: -moz-transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
+  -o-transition: -o-transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
+  -webkit-transition: -webkit-transform 0.3s, visibility 0s, opacity 0.3s;
+  -webkit-transition-delay: 0s, 0s, 0s;
+  transition: transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -webkit-transform: scale(1);
+  transform: scale(1);
+}
+
 .video-controls {
   position: absolute;
   list-style: none;
@@ -860,26 +1026,6 @@ input[type="checkbox"]:focus {
   color: #fff;
 }
 
-@-webkit-keyframes ripple-animation {
-  0% {
-    -webkit-transform: scale(0.01);
-    transform: scale(0.01);
-  }
-  100% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
-}
-@keyframes ripple-animation {
-  0% {
-    -webkit-transform: scale(0.01);
-    transform: scale(0.01);
-  }
-  100% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
-}
 /* ::Print */
 /* ------------------------------------------------------------ */
 @media print {
