--- a/LineShaftKiosk/assets/css/screen.css
+++ b/LineShaftKiosk/assets/css/screen.css
@@ -1639,7 +1639,7 @@ perspective effects (not including the modals and the overlay).
 .video-controls {
   position: absolute;
   list-style: none;
-  background: #ffd008;
+  background: #ffea08;
   height: 100vh;
   width: 100%;
 }
