--- a/LineShaftKiosk/assets/css/screen.css
+++ b/LineShaftKiosk/assets/css/screen.css
@@ -1615,19 +1615,23 @@ perspective effects (not including the modals and the overlay).
 }
 
 .cc-button:first-child {
+  display: none;
   background: #51dfaa;
 }
 
 .cc-button:nth-child(2) {
+  display: none;
   background: #00b6dd;
 }
 
 .cc-button:nth-child(3) {
+  display: none;
   background: #9e78c0;
   color: #fff;
 }
 
 .cc-button:nth-child(4) {
+  display: none;
   background: #9e78c0;
 }
 
