Changing background to blue

--- a/LineShaftKiosk/assets/css/screen.css
+++ b/LineShaftKiosk/assets/css/screen.css
@@ -1594,7 +1594,7 @@ perspective effects (not including the modals and the overlay).
   height: 1080px;
   margin: 0 150px;
   background: #34363c;
-  background-image:url('../images/orange-01.jpg');
+  background-image:url('../images/blue.jpg');
   padding: 250px;
   overflow: hidden;
   z-index: 999;
