--- a/LineShaftKiosk/assets/css/screen.css
+++ b/LineShaftKiosk/assets/css/screen.css
@@ -1595,7 +1595,7 @@ perspective effects (not including the modals and the overlay).
   margin: 0 150px;
   
   background: #34363c;
-  background-image:url('../images/grey-with-cogs.jpg');
+  background-image:url('../images/grey-with-cogs-faked.jpg');
   background-size: 1920 1080;
   padding: 250px;
   overflow: hidden;
