Changing control bar back to yellow

--- a/LineShaftKiosk/assets/css/screen.css
+++ b/LineShaftKiosk/assets/css/screen.css
@@ -1645,8 +1645,8 @@ perspective effects (not including the modals and the overlay).
 .video-controls {
   position: absolute;
   list-style: none;
- /*  background: #ffd008; */
-  background: #0076e7;
+  background: #ffd008; 
+ /*  background: #0076e7;*/
   height: 100vh;
   width: 100%;
 }
