--- a/LineShaftKiosk/assets/css/screen.css
+++ b/LineShaftKiosk/assets/css/screen.css
@@ -1646,7 +1646,7 @@ perspective effects (not including the modals and the overlay).
   position: absolute;
   list-style: none;
  /*  background: #ffd008; */
-  background: #0050c5;
+  background: #4d4d4d;
   height: 100vh;
   width: 100%;
 }
