--- a/LineShaftKiosk/assets/css/screen.css
+++ b/LineShaftKiosk/assets/css/screen.css
@@ -68,15 +68,6 @@ textarea {
   resize: vertical;
 }
 
-.row, .row__colspaced {
-  *zoom: 1;
-}
-.row:after, .row__colspaced:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
 /* ::Base styles */
 /* ------------------------------------------------------------ */
 html {
@@ -87,9 +78,9 @@ html {
     -webkit-text-size-adjust: 100%;
   }
 }
-/* changed background*/
+
 body {
-  background: #ffffff;
+  background: #333;
   color: #777;
 }
 
@@ -182,15 +173,6 @@ input[type="checkbox"]:focus {
   outline: thin dotted #333;
   outline: 5px auto -webkit-focus-ring-color;
   outline-offset: -2px;
-}
-
-.row, .row__colspaced {
-  *zoom: 1;
-}
-.row:after, .row__colspaced:after {
-  content: "";
-  display: table;
-  clear: both;
 }
 
 .as-heading__headline, .is-typeset .headline {
@@ -292,532 +274,6 @@ input[type="checkbox"]:focus {
 
 .as-blockquote--typeset, .is-typeset blockquote {
   margin: 0.6285714em 0;
-}
-
-.row, .row__colspaced {
-  *zoom: 1;
-}
-.row:after, .row__colspaced:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-*[class*="colspan"] {
-  width: 100%;
-  display: block;
-}
-
-*[class*="as-grid"] {
-  float: left;
-  display: inline;
-  display: inline-block;
-}
-
-.lt-ie9 *[class*="with-gutter"] {
-  padding-left: 3%;
-}
-@media screen and (min-width: 420px) {
-  *[class*="with-gutter"] {
-    padding-left: 3%;
-  }
-}
-
-.row {
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-@media screen and (min-width: 420px) {
-  .row {
-    min-width: 420px;
-  }
-  .row .colspan2-1 {
-    width: 50%;
-  }
-  .row .colspan2-2 {
-    width: 100%;
-  }
-  .row .push2-1 {
-    margin-left: 50%;
-  }
-  .row .push2-2 {
-    margin-left: 100%;
-  }
-  .row .pull2-1 {
-    margin-right: 50%;
-  }
-  .row .pull2-2 {
-    margin-right: 100%;
-  }
-  .row .push-disable2 {
-    margin-left: 0;
-  }
-  .row .pull-disable2 {
-    margin-right: 0;
-  }
-  .row .hide-at2 {
-    display: none;
-  }
-  .row .block-show-at2 {
-    display: block;
-  }
-  .row .inline-show-at2 {
-    display: inline;
-    display: inline-block;
-  }
-}
-@media screen and (min-width: 600px) {
-  .row {
-    padding-left: 40px;
-    padding-right: 40px;
-    min-width: 600px;
-  }
-  .row .colspan6-1 {
-    width: 16.6666667%;
-  }
-  .row .colspan6-2 {
-    width: 33.3333333%;
-  }
-  .row .colspan6-3 {
-    width: 50%;
-  }
-  .row .colspan6-4 {
-    width: 66.6666667%;
-  }
-  .row .colspan6-5 {
-    width: 83.3333333%;
-  }
-  .row .colspan6-6 {
-    width: 100%;
-  }
-  .row .push6-1 {
-    margin-left: 16.6666667%;
-  }
-  .row .push6-2 {
-    margin-left: 33.3333333%;
-  }
-  .row .push6-3 {
-    margin-left: 50%;
-  }
-  .row .push6-4 {
-    margin-left: 66.6666667%;
-  }
-  .row .push6-5 {
-    margin-left: 83.3333333%;
-  }
-  .row .push6-6 {
-    margin-left: 100%;
-  }
-  .row .pull6-1 {
-    margin-right: 16.6666667%;
-  }
-  .row .pull6-2 {
-    margin-right: 33.3333333%;
-  }
-  .row .pull6-3 {
-    margin-right: 50%;
-  }
-  .row .pull6-4 {
-    margin-right: 66.6666667%;
-  }
-  .row .pull6-5 {
-    margin-right: 83.3333333%;
-  }
-  .row .pull6-6 {
-    margin-right: 100%;
-  }
-  .row .push-disable6 {
-    margin-left: 0;
-  }
-  .row .pull-disable6 {
-    margin-right: 0;
-  }
-  .row .hide-at6 {
-    display: none;
-  }
-  .row .block-show-at6 {
-    display: block;
-  }
-  .row .inline-show-at6 {
-    display: inline;
-    display: inline-block;
-  }
-}
-@media screen and (min-width: 900px) {
-  .row {
-    min-width: 900px;
-  }
-  .row .colspan8-1 {
-    width: 12.5%;
-  }
-  .row .colspan8-2 {
-    width: 25%;
-  }
-  .row .colspan8-3 {
-    width: 37.5%;
-  }
-  .row .colspan8-4 {
-    width: 50%;
-  }
-  .row .colspan8-5 {
-    width: 62.5%;
-  }
-  .row .colspan8-6 {
-    width: 75%;
-  }
-  .row .colspan8-7 {
-    width: 87.5%;
-  }
-  .row .colspan8-8 {
-    width: 100%;
-  }
-  .row .push8-1 {
-    margin-left: 12.5%;
-  }
-  .row .push8-2 {
-    margin-left: 25%;
-  }
-  .row .push8-3 {
-    margin-left: 37.5%;
-  }
-  .row .push8-4 {
-    margin-left: 50%;
-  }
-  .row .push8-5 {
-    margin-left: 62.5%;
-  }
-  .row .push8-6 {
-    margin-left: 75%;
-  }
-  .row .push8-7 {
-    margin-left: 87.5%;
-  }
-  .row .push8-8 {
-    margin-left: 100%;
-  }
-  .row .pull8-1 {
-    margin-right: 12.5%;
-  }
-  .row .pull8-2 {
-    margin-right: 25%;
-  }
-  .row .pull8-3 {
-    margin-right: 37.5%;
-  }
-  .row .pull8-4 {
-    margin-right: 50%;
-  }
-  .row .pull8-5 {
-    margin-right: 62.5%;
-  }
-  .row .pull8-6 {
-    margin-right: 75%;
-  }
-  .row .pull8-7 {
-    margin-right: 87.5%;
-  }
-  .row .pull8-8 {
-    margin-right: 100%;
-  }
-  .row .push-disable8 {
-    margin-left: 0;
-  }
-  .row .pull-disable8 {
-    margin-right: 0;
-  }
-  .row .hide-at8 {
-    display: none;
-  }
-  .row .block-show-at8 {
-    display: block;
-  }
-  .row .inline-show-at8 {
-    display: inline;
-    display: inline-block;
-  }
-}
-@media screen and (min-width: 1100px) {
-  .row {
-    min-width: 1100px;
-  }
-  .row .colspan12-1 {
-    width: 8.3333333%;
-  }
-  .row .colspan12-2 {
-    width: 16.6666667%;
-  }
-  .row .colspan12-3 {
-    width: 25%;
-  }
-  .row .colspan12-4 {
-    width: 33.3333333%;
-  }
-  .row .colspan12-5 {
-    width: 41.6666667%;
-  }
-  .row .colspan12-6 {
-    width: 50%;
-  }
-  .row .colspan12-7 {
-    width: 58.3333333%;
-  }
-  .row .colspan12-8 {
-    width: 66.6666667%;
-  }
-  .row .colspan12-9 {
-    width: 75%;
-  }
-  .row .colspan12-10 {
-    width: 83.3333333%;
-  }
-  .row .colspan12-11 {
-    width: 91.6666667%;
-  }
-  .row .colspan12-12 {
-    width: 100%;
-  }
-  .row .push12-1 {
-    margin-left: 8.3333333%;
-  }
-  .row .push12-2 {
-    margin-left: 16.6666667%;
-  }
-  .row .push12-3 {
-    margin-left: 25%;
-  }
-  .row .push12-4 {
-    margin-left: 33.3333333%;
-  }
-  .row .push12-5 {
-    margin-left: 41.6666667%;
-  }
-  .row .push12-6 {
-    margin-left: 50%;
-  }
-  .row .push12-7 {
-    margin-left: 58.3333333%;
-  }
-  .row .push12-8 {
-    margin-left: 66.6666667%;
-  }
-  .row .push12-9 {
-    margin-left: 75%;
-  }
-  .row .push12-10 {
-    margin-left: 83.3333333%;
-  }
-  .row .push12-11 {
-    margin-left: 91.6666667%;
-  }
-  .row .push12-12 {
-    margin-left: 100%;
-  }
-  .row .pull12-1 {
-    margin-right: 8.3333333%;
-  }
-  .row .pull12-2 {
-    margin-right: 16.6666667%;
-  }
-  .row .pull12-3 {
-    margin-right: 25%;
-  }
-  .row .pull12-4 {
-    margin-right: 33.3333333%;
-  }
-  .row .pull12-5 {
-    margin-right: 41.6666667%;
-  }
-  .row .pull12-6 {
-    margin-right: 50%;
-  }
-  .row .pull12-7 {
-    margin-right: 58.3333333%;
-  }
-  .row .pull12-8 {
-    margin-right: 66.6666667%;
-  }
-  .row .pull12-9 {
-    margin-right: 75%;
-  }
-  .row .pull12-10 {
-    margin-right: 83.3333333%;
-  }
-  .row .pull12-11 {
-    margin-right: 91.6666667%;
-  }
-  .row .pull12-12 {
-    margin-right: 100%;
-  }
-  .row .push-disable12 {
-    margin-left: 0;
-  }
-  .row .pull-disable12 {
-    margin-right: 0;
-  }
-  .row .hide-at12 {
-    display: none;
-  }
-  .row .block-show-at12 {
-    display: block;
-  }
-  .row .inline-show-at12 {
-    display: inline;
-    display: inline-block;
-  }
-}
-@media screen and (min-width: 1300px) {
-  .row {
-    width: 1300px;
-  }
-}
-.lt-ie9 .row {
-  width: 980px;
-}
-.lt-ie9 .row .colspan12-1 {
-  width: 8.3333333%;
-}
-.lt-ie9 .row .colspan12-2 {
-  width: 16.6666667%;
-}
-.lt-ie9 .row .colspan12-3 {
-  width: 25%;
-}
-.lt-ie9 .row .colspan12-4 {
-  width: 33.3333333%;
-}
-.lt-ie9 .row .colspan12-5 {
-  width: 41.6666667%;
-}
-.lt-ie9 .row .colspan12-6 {
-  width: 50%;
-}
-.lt-ie9 .row .colspan12-7 {
-  width: 58.3333333%;
-}
-.lt-ie9 .row .colspan12-8 {
-  width: 66.6666667%;
-}
-.lt-ie9 .row .colspan12-9 {
-  width: 75%;
-}
-.lt-ie9 .row .colspan12-10 {
-  width: 83.3333333%;
-}
-.lt-ie9 .row .colspan12-11 {
-  width: 91.6666667%;
-}
-.lt-ie9 .row .colspan12-12 {
-  width: 100%;
-}
-.lt-ie9 .row .push12-1 {
-  margin-left: 8.3333333%;
-}
-.lt-ie9 .row .push12-2 {
-  margin-left: 16.6666667%;
-}
-.lt-ie9 .row .push12-3 {
-  margin-left: 25%;
-}
-.lt-ie9 .row .push12-4 {
-  margin-left: 33.3333333%;
-}
-.lt-ie9 .row .push12-5 {
-  margin-left: 41.6666667%;
-}
-.lt-ie9 .row .push12-6 {
-  margin-left: 50%;
-}
-.lt-ie9 .row .push12-7 {
-  margin-left: 58.3333333%;
-}
-.lt-ie9 .row .push12-8 {
-  margin-left: 66.6666667%;
-}
-.lt-ie9 .row .push12-9 {
-  margin-left: 75%;
-}
-.lt-ie9 .row .push12-10 {
-  margin-left: 83.3333333%;
-}
-.lt-ie9 .row .push12-11 {
-  margin-left: 91.6666667%;
-}
-.lt-ie9 .row .push12-12 {
-  margin-left: 100%;
-}
-.lt-ie9 .row .pull12-1 {
-  margin-right: 8.3333333%;
-}
-.lt-ie9 .row .pull12-2 {
-  margin-right: 16.6666667%;
-}
-.lt-ie9 .row .pull12-3 {
-  margin-right: 25%;
-}
-.lt-ie9 .row .pull12-4 {
-  margin-right: 33.3333333%;
-}
-.lt-ie9 .row .pull12-5 {
-  margin-right: 41.6666667%;
-}
-.lt-ie9 .row .pull12-6 {
-  margin-right: 50%;
-}
-.lt-ie9 .row .pull12-7 {
-  margin-right: 58.3333333%;
-}
-.lt-ie9 .row .pull12-8 {
-  margin-right: 66.6666667%;
-}
-.lt-ie9 .row .pull12-9 {
-  margin-right: 75%;
-}
-.lt-ie9 .row .pull12-10 {
-  margin-right: 83.3333333%;
-}
-.lt-ie9 .row .pull12-11 {
-  margin-right: 91.6666667%;
-}
-.lt-ie9 .row .pull12-12 {
-  margin-right: 100%;
-}
-.lt-ie9 .row .push-disable12 {
-  margin-left: 0;
-}
-.lt-ie9 .row .pull-disable12 {
-  margin-right: 0;
-}
-.lt-ie9 .row .hide-at12 {
-  display: none;
-}
-.lt-ie9 .row .block-show-at12 {
-  display: block;
-}
-.lt-ie9 .row .inline-show-at12 {
-  display: inline;
-  display: inline-block;
-}
-
-.row__colspaced {
-  position: relative;
-}
-.lt-ie9 .row__colspaced {
-  min-width: 103%;
-  left: -3%;
-}
-@media screen and (min-width: 420px) {
-  .row__colspaced {
-    min-width: 103%;
-    left: -3%;
-  }
-}
-.lt-ie9 .row__colspaced {
-  max-width: 100%;
-  min-width: auto;
-  left: auto;
 }
 
 /* General styles for the modal */
@@ -1585,68 +1041,97 @@ perspective effects (not including the modals and the overlay).
   overflow: hidden;
 }
 
-
-/* background change*/
 .control-center {
   position: relative;
   display: block;
   width: 1770px;
   height: 1080px;
   margin: 0 150px;
-  
   background: #34363c;
-  background-image:url('../images/grey-back-with-title-and-cogs.jpg'); 
-  background-size: 1920 1080;
-  padding: 250px;
   overflow: hidden;
   z-index: 999;
 }
 
 .cc-button {
-  display: inline-block;
   padding: 125px;
   color: #fff;
   margin: 0;
-  -moz-box-shadow: 0px 3px 10px 3px #323232;
-  -webkit-box-shadow: 0px 3px 10px 3px #323232;
-  box-shadow: 0px 3px 10px 3px #323232;
 }
 .cc-button .icon {
   width: 100px;
   height: 100px;
+  vertical-align: middle;
 }
 
 .cc-button:first-child {
-
-  background: #51dfaa;
+  background: url("../images/topvid.jpg");
+  background-size: cover;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  display: inline;
+  float: left;
+  width: 66.6666667%;
+  padding: 0 20px;
+  height: 50%;
 }
 
 .cc-button:nth-child(2) {
-
   background: #00b6dd;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  display: inline;
+  float: left;
+  width: 33.3333333%;
+  padding: 0 20px;
+  height: 50%;
 }
 
 .cc-button:nth-child(3) {
-
   background: #9e78c0;
-  color: #fff;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  display: inline;
+  float: left;
+  width: 33.3333333%;
+  padding: 0 20px;
+  height: 50%;
 }
 
 .cc-button:nth-child(4) {
- 
-  background: #9e78c0;
+  background: #f5f0e0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  display: inline;
+  float: left;
+  width: 33.3333333%;
+  padding: 0 20px;
+  height: 50%;
+}
+
+.cc-button:nth-child(5) {
+  background: #ff7659;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  display: inline;
+  float: left;
+  width: 33.3333333%;
+  padding: 0 20px;
+  height: 50%;
 }
 
 .video-controls_wrap {
   overflow: hidden;
 }
 
-/* side bar */
 .video-controls {
   position: absolute;
   list-style: none;
- /*  background: #ffd008; */
-  background: #333;
+  background: #21252d;
   height: 100vh;
   width: 100%;
 }
