--- a/LineShaftKiosk/assets/css/screen.css
+++ b/LineShaftKiosk/assets/css/screen.css
@@ -89,7 +89,7 @@ a {
   text-decoration: none;
 }
 a:hover, a:focus, a:active {
-  color: #67b2b1;
+  color: #00c59d;
 }
 
 /* ::Import styles */
@@ -213,11 +213,13 @@ input[type="checkbox"]:focus {
   padding: 6em 20%;
   text-align: left;
   overflow-y: auto;
+  color: #fff;
 }
 .cd-modal p {
   margin: 2em 0;
   font-size: 2rem;
   line-height: 2;
+  font-weight: 100;
 }
 .modal-is-visible .cd-modal {
   z-index: 1;
@@ -241,13 +243,19 @@ input[type="checkbox"]:focus {
 .cd-modal-action .btn, .cd-modal-action .cd-modal-bg {
   display: inline-block;
   height: 4em;
-  background-color: #f1f1f1;
+  background-color: #888;
 }
 .cd-modal-action .btn {
   width: 12.5em;
   border-radius: 5em;
+  color: #fff;
+  font-weight: 500;
   line-height: 4em;
+  font-size: 18px;
+  letter-spacing: 1px;
   white-space: nowrap;
+  background: #00c59d;
+  text-transform: uppercase;
   -moz-transition: color 0.2s 0.3s, width 0.3s 0s;
   -o-transition: color 0.2s 0.3s, width 0.3s 0s;
   -webkit-transition: color 0.2s, width 0.3s;
@@ -298,11 +306,11 @@ input[type="checkbox"]:focus {
   white-space: nowrap;
   visibility: hidden;
   opacity: 0;
-  -moz-transition: -moz-transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s;
-  -o-transition: -o-transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s;
-  -webkit-transition: -webkit-transform 0.3s, visibility 0s, opacity 0.3s;
-  -webkit-transition-delay: 0s, 0.3s, 0s;
-  transition: transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s;
+  -moz-transition: visibility 0s 0.3s, opacity 0.3s 0s;
+  -o-transition: visibility 0s 0.3s, opacity 0.3s 0s;
+  -webkit-transition: visibility 0s, opacity 0.3s;
+  -webkit-transition-delay: 0.3s, 0s;
+  transition: visibility 0s 0.3s, opacity 0.3s 0s;
 }
 .no-touch .cd-modal-close:hover {
   background-color: rgba(0, 0, 0, 0.5);
@@ -310,11 +318,11 @@ input[type="checkbox"]:focus {
 .modal-is-visible .cd-modal-close {
   visibility: visible;
   opacity: 1;
-  -moz-transition: -moz-transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
-  -o-transition: -o-transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
-  -webkit-transition: -webkit-transform 0.3s, visibility 0s, opacity 0.3s;
-  -webkit-transition-delay: 0s, 0s, 0s;
-  transition: transform 0.3s 0s, visibility 0s 0s, opacity 0.3s 0s;
+  -moz-transition: visibility 0s 0s, opacity 0.3s 0s;
+  -o-transition: visibility 0s 0s, opacity 0.3s 0s;
+  -webkit-transition: visibility 0s, opacity 0.3s;
+  -webkit-transition-delay: 0s, 0s;
+  transition: visibility 0s 0s, opacity 0.3s 0s;
 }
 
 .as-heading__headline, .is-typeset .headline {
@@ -515,6 +523,11 @@ input[type="checkbox"]:focus {
 .video-info .modal-buttons {
   display: block;
   min-height: 450px;
+}
+.video-info .info-play {
+  display: block;
+  height: 630px;
+  width: 100%;
 }
 
 /* ::Print */
