--- a/LineShaftKiosk/assets/css/screen.css
+++ b/LineShaftKiosk/assets/css/screen.css
@@ -176,7 +176,7 @@ input[type="checkbox"]:focus {
 }
 
 .cd-section {
-  padding: 4em 20%;
+  padding: 1em 20%;
   text-align: center;
   background-color: #fff;
 }
@@ -463,7 +463,8 @@ input[type="checkbox"]:focus {
 .video-controls .icon {
   display: block;
   margin: 0 auto;
-  padding: 40px 0;
+  padding: 30px 0;
+  max-width: 40px;
 }
 
 .video-preview {
