--- a/LineShaftKiosk/assets/css/screen.css
+++ b/LineShaftKiosk/assets/css/screen.css
@@ -311,20 +311,10 @@ input[type="checkbox"]:focus {
 }
 .cd-modal .cd-modal-content {
   height: 100%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  display: inline;
-  float: left;
-  width: 36.6666667%;
-  padding: 0 20px;
-  float: right;
-  padding: 60px 80px;
+  width: 100%;
+  padding: 6em 20%;
   text-align: left;
   overflow-y: auto;
-  background: #fff;
-  opacity: .9;
-  border-left: 20px solid #00c59d;
 }
 .cd-modal h1 {
   font-size: 4rem;
@@ -335,7 +325,7 @@ input[type="checkbox"]:focus {
 }
 .cd-modal p {
   margin-top: .5em;
-  font-size: 1.8rem;
+  font-size: 2rem;
   line-height: 2;
   font-weight: 100;
 }
@@ -361,6 +351,7 @@ input[type="checkbox"]:focus {
 .cd-modal-action .btn, .cd-modal-action .cd-modal-bg {
   display: inline-block;
   height: 4em;
+  background-color: #fff;
 }
 .cd-modal-action .btn {
   width: 12.5em;
@@ -407,7 +398,7 @@ input[type="checkbox"]:focus {
   transition: visibility 0s 0.1s;
 }
 .cd-modal-action .cd-modal-bg.is-visible {
-  opacity: 1;
+  opacity: .9;
   visibility: visible;
 }
 
@@ -426,11 +417,11 @@ input[type="checkbox"]:focus {
   white-space: nowrap;
   visibility: hidden;
   opacity: 0;
-  -moz-transition: visibility 0s 0.3s, opacity 0.3s 0s;
-  -o-transition: visibility 0s 0.3s, opacity 0.3s 0s;
+  -moz-transition: visibility 0s 0.1s, opacity 0.3s 0s;
+  -o-transition: visibility 0s 0.1s, opacity 0.3s 0s;
   -webkit-transition: visibility 0s, opacity 0.3s;
-  -webkit-transition-delay: 0.3s, 0s;
-  transition: visibility 0s 0.3s, opacity 0.3s 0s;
+  -webkit-transition-delay: 0.1s, 0s;
+  transition: visibility 0s 0.1s, opacity 0.3s 0s;
 }
 .no-touch .cd-modal-close:hover {
   background-color: rgba(0, 0, 0, 0.5);
