--- a/LineShaftKiosk/assets/css/screen.css
+++ b/LineShaftKiosk/assets/css/screen.css
@@ -98,7 +98,7 @@ a:hover, a:focus, a:active {
   font-family: 'Open Sans', sans-serif, sans-serif;
 }
 
-.font-var {
+.font-var, .cd-modal h1, .cd-modal p {
   font-family: Georgia, serif;
 }
 
@@ -405,10 +405,10 @@ input[type="checkbox"]:focus {
 .cd-modal-close {
   position: fixed;
   z-index: 999;
-  top: 20px;
-  right: 20px;
-  height: 50px;
-  width: 50px;
+  top: 50px;
+  right: 50px;
+  height: 100px;
+  width: 100px;
   border-radius: 50%;
   background: rgba(0, 197, 157, 0.5) url(../images/cd-icon-close.svg) no-repeat center center;
   /* image replacement */
