--- a/LineShaftKiosk/assets/css/screen.css
+++ b/LineShaftKiosk/assets/css/screen.css
@@ -94,12 +94,33 @@ a:hover, a:focus, a:active {
 
 /* ::Import styles */
 /* ------------------------------------------------------------ */
-.font-body, body {
-  font-family: 'Open Sans', sans-serif, sans-serif;
+@font-face {
+  font-family: 'roboto_condensedbold';
+  src: url("../fonts/RobotoCondensed-Bold-webfont.eot");
+  src: url("../fonts/RobotoCondensed-Bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoCondensed-Bold-webfont.woff") format("woff"), url("../fonts/RobotoCondensed-Bold-webfont.ttf") format("truetype"), url("../fonts/RobotoCondensed-Bold-webfont.svg#roboto_condensedbold") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'robotolight';
+  src: url("../fonts/Roboto-Light-webfont.eot");
+  src: url("../fonts/Roboto-Light-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/Roboto-Light-webfont.woff") format("woff"), url("../fonts/Roboto-Light-webfont.ttf") format("truetype"), url("../fonts/Roboto-Light-webfont.svg#robotolight") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'robotobold';
+  src: url("../fonts/Roboto-Bold-webfont.eot");
+  src: url("../fonts/Roboto-Bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/Roboto-Bold-webfont.woff") format("woff"), url("../fonts/Roboto-Bold-webfont.ttf") format("truetype"), url("../fonts/Roboto-Bold-webfont.svg#robotobold") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+.font-body, body, .cd-modal h1 {
+  font-family: 'robotobold', sans-serif;
 }
 
-.font-var, .cd-modal h1, .cd-modal p {
-  font-family: Georgia, serif;
+.font-var, .cd-modal p {
+  font-family: 'robotolight', sans-serif;
 }
 
 p, span, cite, ol, ul, pre, label, input, textarea {
@@ -321,7 +342,7 @@ input[type="checkbox"]:focus {
   font-weight: 700;
   margin-top: 4em;
   margin-bottom: 0;
-  font-style: italic;
+  color: #00c59d;
 }
 .cd-modal p {
   margin-top: .5em;
@@ -359,10 +380,15 @@ input[type="checkbox"]:focus {
   color: #fff;
   font-weight: 500;
   line-height: 4em;
+  padding-left: 1.5em;
   font-size: 18px;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   white-space: nowrap;
-  background: #00c59d;
+  background-color: #00c59d;
+  background-image: url(../images/popup.svg);
+  background-size: 25px auto;
+  background-repeat: no-repeat;
+  background-position: 16% 50%;
   text-transform: uppercase;
   -moz-transition: color 0.2s 0.3s, width 0.3s 0s;
   -o-transition: color 0.2s 0.3s, width 0.3s 0s;
@@ -437,6 +463,9 @@ input[type="checkbox"]:focus {
   -webkit-transition-delay: 0s, 0s;
   transition: visibility 0s 0s, opacity 0.2s 0s;
 }
+.modal-is-visible .cd-modal-close:active {
+  opacity: .4;
+}
 
 .wrapper {
   overflow: hidden;
@@ -452,7 +481,7 @@ input[type="checkbox"]:focus {
 }
 
 .hidden {
-  opacity: .1;
+  opacity: 0;
 }
 
 .video-controls_wrap {
@@ -493,8 +522,8 @@ input[type="checkbox"]:focus {
 }
 
 .play {
-  display: table-cell;
-  vertical-align: middle;
+  margin-top: 40%;
+  display: block;
 }
 .play img {
   display: block;
