--- a/LineShaftKiosk/assets/css/screen.css
+++ b/LineShaftKiosk/assets/css/screen.css
@@ -399,13 +399,14 @@ input[type="checkbox"]:focus {
   padding-top: 0;
 }
 .cd-modal-action .btn.to-circle {
+  background-position: 50% 50%;
   width: 4em;
   color: transparent;
-  -moz-transition: color 0.2s 0s, width 0.3s 0.2s;
-  -o-transition: color 0.2s 0s, width 0.3s 0.2s;
-  -webkit-transition: color 0.2s, width 0.3s;
-  -webkit-transition-delay: 0s, 0.2s;
-  transition: color 0.2s 0s, width 0.3s 0.2s;
+  -moz-transition: color 0.2s 0s, width 0.3s 0.2s, background 0.3s;
+  -o-transition: color 0.2s 0s, width 0.3s 0.2s, background 0.3s;
+  -webkit-transition: color 0.2s, width 0.3s, background 0.3s;
+  -webkit-transition-delay: 0s, 0.2s, 0s;
+  transition: color 0.2s 0s, width 0.3s 0.2s, background 0.3s;
 }
 .cd-modal-action .cd-modal-bg {
   position: absolute;
@@ -456,14 +457,14 @@ input[type="checkbox"]:focus {
 .modal-is-visible .cd-modal-close {
   visibility: visible;
   opacity: 1;
-  -moz-transition: visibility 0s 0s, opacity 0.2s 0s;
-  -o-transition: visibility 0s 0s, opacity 0.2s 0s;
-  -webkit-transition: visibility 0s, opacity 0.2s;
+  -moz-transition: visibility 0s 0s, opacity 0.3s 0s;
+  -o-transition: visibility 0s 0s, opacity 0.3s 0s;
+  -webkit-transition: visibility 0s, opacity 0.3s;
   -webkit-transition-delay: 0s, 0s;
-  transition: visibility 0s 0s, opacity 0.2s 0s;
+  transition: visibility 0s 0s, opacity 0.3s 0s;
 }
 .modal-is-visible .cd-modal-close:active {
-  opacity: .4;
+  opacity: .3;
 }
 
 .wrapper {
