--- a/LineShaftKiosk/assets/css/screen.css
+++ b/LineShaftKiosk/assets/css/screen.css
@@ -336,13 +336,25 @@ input[type="checkbox"]:focus {
   padding: 6em 20%;
   text-align: left;
   overflow-y: auto;
+  text-align: middle;
 }
 .cd-modal h1 {
   font-size: 4rem;
   font-weight: 700;
-  margin-top: 4em;
+  margin-top: 3em;
   margin-bottom: 0;
   color: #00c59d;
+}
+.cd-modal h1:before {
+  content: '';
+  display: block;
+  margin: 0 auto;
+  height: 100px;
+  width: 100px;
+  background-image: url(../images/works-gears.png);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-position: 50%;
 }
 .cd-modal p {
   margin-top: .5em;
@@ -522,8 +534,9 @@ input[type="checkbox"]:focus {
 }
 
 .play {
-  margin-top: 40%;
-  display: block;
+  margin-top: 42%;
+  margin-left: 40%;
+  display: inline-block;
 }
 .play img {
   display: block;
